--- a/index.html
+++ b/index.html
@@ -8,6 +8,95 @@
     <title>Test</title>
 </head>
 <body>
-    <h1 class="test">Test</h1>
+    <!-- Header -->
+    <header>
+        <img src="img/logo.svg" alt="Logo di The Booleaner">
+    </header>
+    <!-- /Header -->
+
+    <!-- Main -->
+    <main>
+
+        <!-- Sezione titolo -->
+        <section>
+            <h1></h1>
+            <p></p>
+            <div>
+                <img src="" alt="">
+                <img src="" alt="">
+            </div>
+            <p>
+            </p>
+        </section>
+        <!-- /sezione titolo -->
+
+        <!-- sezione testo 1 -->
+        <section>
+            <p></p>
+        </section>
+        <!-- /Sezione testo 1 -->
+
+        <!-- Sezione ul -->
+        <section>
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </section>
+        <!-- /Sezione ul -->
+
+        <!-- Sezione tabella -->
+        <table>
+            <thead>
+                <tr>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </tfoot>
+        </table>
+        <!-- /Sezione tabella -->
+
+        <!-- Sezione testo 2 -->
+        <p></p>
+        <!-- /sezione testo 2 -->
+    </main>
+    <!-- /Main -->
+    
+    <!-- Footer -->
+    <footer>
+        <p></p>
+
+        <div>
+            <img src="" alt="" class="footer-img">
+            <img src="" alt="" class="footer-img">
+        </div>
+    </footer>
+    <!-- /Footer -->
 </body>
 </html>
