--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <!-- Header -->
     <header>
-        <img src="img/logo.svg" alt="Logo di The Booleaner">
+        <img src="img/logo.svg" alt="Logo di The Booleaner" class="logo">
     </header>
     <!-- /Header -->
 
