--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <!-- Sezione titolo -->
         <section>
-            <h1></h1>
+            <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
             <p></p>
             <div>
                 <img src="" alt="">
