--- a/index.html
+++ b/index.html
@@ -20,12 +20,16 @@
         <!-- Sezione titolo -->
         <section>
             <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
-            <p></p>
+            <p class="grigio">Scritto da <span class="turchese">The Booleaner</span><br><span class="testo-piccolo">il 10/10/2020</span></p>    
             <div>
-                <img src="" alt="">
-                <img src="" alt="">
+                <img src="img/tim-1.jpg" alt="Tim Berners-Lee alla Knight Foundation">
+                <img src="img/tim-2.jpg" alt="Tim Berners-Lee">
             </div>
-            <p>
+            <p class="testo-piccolo">
+                1st Photo: Tizio and Caio, by Sempronio 
+                <br>
+                2nd Photo: Wikimedia, by Pippo
+
             </p>
         </section>
         <!-- /sezione titolo -->
