--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
 
         <!-- sezione testo 1 -->
         <section>
-            <p></p>
+            <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor quaerat modi mollitia enim molestiae, <span class="testo-evidenziato">sapiente facilis unde doloribus aliquam</span>  eum corrupti voluptatem dignissimos nulla repellendus praesentium ipsum sit. Iusto, odio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente maiores sequi voluptatibus expedita est ratione mollitia, illo sunt, obcaecati non voluptatem, quasi minima iste tempora vero quas commodi pariatur error? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam porro corporis provident eveniet error repudiandae iste eaque laudantium quas distinctio doloremque ducimus dolorum enim, ad excepturi modi? Delectus, vitae vel.
+            </p>
         </section>
         <!-- /Sezione testo 1 -->
 
