--- a/index.html
+++ b/index.html
@@ -45,37 +45,37 @@
         <!-- Sezione ul -->
         <section>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique architecto ex eos, vel illo excepturi quos iusto doloremque deserunt ratione libero labore placeat asperiores praesentium itaque ipsum, iure repellat in?</li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus cumque ea, dicta sunt quo rerum? Minus quam aliquid provident, eum asperiores eligendi magni fuga assumenda, ab voluptas ea pariatur adipisci!</li>
+                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut soluta quia explicabo nulla numquam veritatis molestias vitae similique nostrum. Dolores aperiam corporis nulla aliquid iure consequuntur id unde dignissimos dolore?</li>
             </ul>
         </section>
         <!-- /Sezione ul -->
 
         <!-- Sezione tabella -->
         <table>
-            <thead>
-                <tr>
-                    <th></th>
-                    <th></th>
-                    <th></th>
+            <thead class="sfondo-blu">
+                <tr class="sfondo blu">
+                    <th class="bianco">Lorem ipsum dolor</th>
+                    <th class="bianco">Lorem ipsum dolor</th>
+                    <th class="bianco">Lorem ipsum dolor</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, tempore, repellat eum eligendi expedita ducimus quam voluptatum architecto ex id aspernatur amet nihil doloremque cum itaque. Nemo laborum ratione doloremque?</td>
                 </tr>
                 <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto perspiciatis delectus est earum sed quia, tempora sequi amet necessitatibus maiores quo totam velit sit consequatur laborum voluptatem similique quibusdam eum.</td>
                 </tr>
                 <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui temporibus voluptatem, hic necessitatibus autem natus minima provident accusamus neque, perspiciatis odio at, voluptatibus praesentium corporis quod quaerat omnis. Quaerat, ipsum.</td>
                 </tr>
             </tbody>
             <tfoot>
