--- a/index.html
+++ b/index.html
@@ -55,36 +55,29 @@
         <!-- Sezione tabella -->
         <table>
             <thead class="sfondo-blu">
-                <tr class="sfondo blu">
-                    <th class="bianco">Lorem ipsum dolor</th>
-                    <th class="bianco">Lorem ipsum dolor</th>
-                    <th class="bianco">Lorem ipsum dolor</th>
+                <tr>
+                    <th class="bianco cella-piccola">Lorem ipsum dolor</th>
+                    <th class="bianco cella-piccola">Lorem ipsum dolor</th>
+                    <th class="bianco cella-grande">Lorem ipsum dolor</th>
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td>Lorem ipsum dolor</td>
-                    <td>Lorem ipsum dolor</td>
-                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, tempore, repellat eum eligendi expedita ducimus quam voluptatum architecto ex id aspernatur amet nihil doloremque cum itaque. Nemo laborum ratione doloremque?</td>
+                <tr class="sfondo-turchese">
+                    <td class="cella-piccola">Lorem ipsum dolor</td>
+                    <td class="cella-piccola">Lorem ipsum dolor</td>
+                    <td class="cella-grande">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, tempore, repellat eum eligendi expedita ducimus quam voluptatum architecto ex id aspernatur amet nihil doloremque cum itaque. Nemo laborum ratione doloremque?</td>
                 </tr>
                 <tr>
-                    <td>Lorem ipsum dolor</td>
-                    <td>Lorem ipsum dolor</td>
-                    <td>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto perspiciatis delectus est earum sed quia, tempora sequi amet necessitatibus maiores quo totam velit sit consequatur laborum voluptatem similique quibusdam eum.</td>
+                    <td class="cella-piccola">Lorem ipsum dolor</td>
+                    <td class="cella-piccola">Lorem ipsum dolor</td>
+                    <td class="cella-grande">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto perspiciatis delectus est earum sed quia, tempora sequi amet necessitatibus maiores quo totam velit sit consequatur laborum voluptatem similique quibusdam eum.</td>
                 </tr>
-                <tr>
-                    <td>Lorem ipsum dolor</td>
-                    <td>Lorem ipsum dolor</td>
-                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui temporibus voluptatem, hic necessitatibus autem natus minima provident accusamus neque, perspiciatis odio at, voluptatibus praesentium corporis quod quaerat omnis. Quaerat, ipsum.</td>
+                <tr class="sfondo-turchese">
+                    <td class="cella-piccola">Lorem ipsum dolor</td>
+                    <td class="cella-piccola">Lorem ipsum dolor</td>
+                    <td class="cella-grande">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui temporibus voluptatem, hic necessitatibus autem natus minima provident accusamus neque, perspiciatis odio at, voluptatibus praesentium corporis quod quaerat omnis. Quaerat, ipsum.</td>
                 </tr>
             </tbody>
-            <tfoot>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-            </tfoot>
         </table>
         <!-- /Sezione tabella -->
 
