--- a/index.html
+++ b/index.html
@@ -82,14 +82,18 @@
         <!-- /Sezione tabella -->
 
         <!-- Sezione testo 2 -->
-        <p></p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem suscipit quibusdam alias consequuntur est obcaecati tempora nihil, natus commodi consequatur mollitia, dolores laboriosam fugit facere esse reprehenderit molestias! Dolor, natus.
+            Deserunt earum sit consectetur. Neque vero atque aperiam, facere deserunt vitae dicta optio voluptas consectetur quas dignissimos repudiandae iure nostrum impedit cumque fuga! Perspiciatis corrupti sit dolore et, tempore amet.
+            Eveniet, consequuntur iure dolorem unde vel error. <span class="testo-evidenziato">Maiores quas aspernatur saepe nostrum quo.</span>  Eligendi repellat officia deserunt eius exercitationem optio veritatis non, corrupti iusto iste magnam est ipsa maiores blanditiis!
+        </p>
         <!-- /sezione testo 2 -->
     </main>
     <!-- /Main -->
     
     <!-- Footer -->
     <footer>
-        <p></p>
+        <p class="testo-grande grigio grassetto">Potrebbero interessarti</p>
 
         <div>
             <img src="" alt="" class="footer-img">
