footer completato - FINE progetto

--- a/index.html
+++ b/index.html
@@ -95,10 +95,13 @@
     <footer>
         <p class="testo-grande grigio grassetto">Potrebbero interessarti</p>
 
-        <div>
-            <img src="" alt="" class="footer-img">
-            <img src="" alt="" class="footer-img">
+        <div class="footer-img1">
+            <h3 class="bianco">Lorem ipsum dolor</h3>
         </div>
+        <div class="footer-img2">
+            <h3 class="bianco">Lorem ipsum dolor</h3>
+        </div>
+        
     </footer>
     <!-- /Footer -->
 </body>
