correzione colore header

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
         <!-- Sezione titolo -->
         <section>
             <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
-            <p class="grigio">Scritto da <span class="turchese">The Booleaner</span><br><span class="testo-piccolo">il 10/10/2020</span></p>    
+            <p class="grigio">Scritto da <span class="turchese">The Booleaner</span><br><span class="testo12">il 10/10/2020</span></p>    
             <div>
                 <img src="img/tim-1.jpg" alt="Tim Berners-Lee alla Knight Foundation">
                 <img src="img/tim-2.jpg" alt="Tim Berners-Lee">
             </div>
-            <p class="testo-piccolo">
+            <p class="testo12">
                 1st Photo: Tizio and Caio, by Sempronio 
                 <br>
                 2nd Photo: Wikimedia, by Pippo
@@ -93,7 +93,7 @@
     
     <!-- Footer -->
     <footer>
-        <p class="testo-grande grigio grassetto">Potrebbero interessarti</p>
+        <p class="testo18 grigio grassetto">Potrebbero interessarti</p>
 
         <div class="footer-img1">
             <h3 class="bianco">Lorem ipsum dolor</h3>
