correzione colore booleaner

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- Sezione titolo -->
         <section>
             <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
-            <p class="grigio">Scritto da <span class="turchese">The Booleaner</span><br><span class="testo12">il 10/10/2020</span></p>    
+            <p class="grigio">Scritto da <span class="azzurro-chiaro">The Booleaner</span><br><span class="testo12">il 10/10/2020</span></p>    
             <div>
                 <img src="img/tim-1.jpg" alt="Tim Berners-Lee alla Knight Foundation">
                 <img src="img/tim-2.jpg" alt="Tim Berners-Lee">
